--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,46 @@
-    # Python virtual environment
-    venv/
-    /venv/
-    __pycache__/
-    *.pyc
-    *.pyo
-    *.pyd
-    
-    # Jupyter Notebook checkpoints
-    .ipynb_checkpoints/
-    
-    # VS Code specific
-    .vscode/
-    
-    # Node.js / Frontend dependencies
-    ev-anomaly-detection/frontend/node_modules/
-    /ev-anomaly-detection/frontend/node_modules/
-    frontend/node_modules/ 
-    /frontend/node_modules/ 
-    node_modules/
-    /node_modules/
-    npm-debug.log*
-    yarn-debug.log*
-    yarn-error.log*
-    
-    # Build outputs
-    dist/
-    build/
-    
-    # Environment variables
-    .env
-    .env.*
-    !.env.example
-    
-    # OS generated files
-    .DS_Store
-    Thumbs.db
-    
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+venv/
+env/
+ENV/
+*.egg-info/
+*.egg
+
+# Environment variables
+.env
+.env.local
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+.DS_Store
+
+# OS
+Thumbs.db
+Desktop.ini
+
+# Logs
+*.log
+
+# Node modules (Frontend)
+node_modules/
+dist/
+.vite/
+*.local
+
+# MongoDB (Data files - generally ignored)
+# *.db  <- Uncomment if you have local DB files you want to ignore
+
+# Models (optional - if models are large)
+# *.pkl <- Uncomment if your model files are very large and you don't want them in Git
+
+# Temporary files
+*.tmp
+*.temp
+
